[gd_scene load_steps=21 format=3 uid="uid://bmnj6nvh72853"]

[ext_resource type="Script" path="res://MadameEstherInt.gd" id="1_eyrpf"]
[ext_resource type="Texture2D" uid="uid://by0xeo4sqjclg" path="res://Assets/MadameEsthersBackground0.png" id="2_6e2ho"]
[ext_resource type="Texture2D" uid="uid://di2ryt3mmxedd" path="res://Assets/MadameEsthersBackground1.png" id="2_h6eyq"]
[ext_resource type="SpriteFrames" uid="uid://bqp3ctdvl3lpr" path="res://resources/MadameEsther.tres" id="3_lgwd8"]
[ext_resource type="PackedScene" uid="uid://x5h5l4pgd60g" path="res://Maps/PixelWorld.tscn" id="3_uf481"]
[ext_resource type="Texture2D" uid="uid://bcyp5xl15kuch" path="res://Assets/MadameEsthersShading.png" id="3_yn4ku"]
[ext_resource type="Texture2D" uid="uid://d22po13ivgm8i" path="res://Assets/MadameEsthersFrame.png" id="4_dmjq0"]
[ext_resource type="StyleBox" uid="uid://c7dnoudvfdag7" path="res://resources/achievements_panel.tres" id="8_1unnu"]
[ext_resource type="Texture2D" uid="uid://b3sk0wu237thc" path="res://Assets/music.png" id="8_vbnvl"]
[ext_resource type="Texture2D" uid="uid://drw5lobmhyrq6" path="res://Assets/sound_effects.png" id="9_53ewe"]
[ext_resource type="AudioStream" uid="uid://bi2tfp3246gdp" path="res://Assets/523397__garuda1982__rain-on-a-tent.wav" id="10_vy6s6"]
[ext_resource type="AudioStream" uid="uid://dpaeatql8xben" path="res://Assets/little_button_sound.wav" id="11_fff7n"]
[ext_resource type="Texture2D" uid="uid://bdrvadyp7v5nq" path="res://resources/RightArrow.tres" id="11_hq25m"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m1yu8"]
size = Vector2(48, 48)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5yqi"]
draw_center = false
expand_margin_right = 32.0

[sub_resource type="Theme" id="Theme_6mec8"]
default_font_size = 20

[sub_resource type="Animation" id="Animation_dfvx2"]
resource_name = "hide_achievements"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Achievements:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(240, 250), Vector2(240, -400)]
}

[sub_resource type="Animation" id="Animation_6dryy"]
resource_name = "show_tip"
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Tips:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Tips:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ar8xg"]
resource_name = "view_achievements"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Achievements:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(240, -400), Vector2(240, 250)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82gdm"]
_data = {
"hide_achievements": SubResource("Animation_dfvx2"),
"show_tip": SubResource("Animation_6dryy"),
"view_achievements": SubResource("Animation_ar8xg")
}

[node name="MadameEstherInt" type="ParallaxBackground"]
script = ExtResource("1_eyrpf")

[node name="Background" type="ParallaxLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]
texture = ExtResource("2_6e2ho")
centered = false

[node name="MadameEsther" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(800, 330)
scale = Vector2(3, 3)
sprite_frames = ExtResource("3_lgwd8")

[node name="Background1" type="ParallaxLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background1"]
texture = ExtResource("2_h6eyq")
centered = false

[node name="PixelWorld" parent="." instance=ExtResource("3_uf481")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 218.0
offset_right = 0.0
offset_bottom = 38.0

[node name="Shading" type="ParallaxLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Shading"]
texture = ExtResource("3_yn4ku")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Frame" type="Sprite2D" parent="CanvasLayer"]
texture = ExtResource("4_dmjq0")
centered = false

[node name="BGM" type="Area2D" parent="CanvasLayer"]
position = Vector2(96, 164)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/BGM"]
shape = SubResource("RectangleShape2D_m1yu8")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/BGM"]
texture_filter = 1
texture = ExtResource("8_vbnvl")

[node name="SE" type="Area2D" parent="CanvasLayer"]
position = Vector2(96, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/SE"]
shape = SubResource("RectangleShape2D_m1yu8")

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/SE"]
texture_filter = 1
texture = ExtResource("9_53ewe")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchor_right = 0.999
anchor_bottom = 1.0
offset_right = 0.599854
offset_bottom = 2.0
mouse_filter = 1

[node name="Tips" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.13
anchor_top = 0.225
anchor_right = 0.431
anchor_bottom = 0.449
offset_left = 0.130005
offset_top = 0.0499878
offset_right = -0.169006
offset_bottom = 0.00198364
text = "Hello World!"
visible_characters = 0
visible_ratio = 0.0

[node name="StreakTracker" type="VBoxContainer" parent="Control"]
modulate = Color(1, 1, 1, 0.784314)
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.594
anchor_top = 0.223
anchor_right = 0.859
anchor_bottom = 0.589
offset_left = 0.194031
offset_top = -0.146011
offset_right = -209.541
offset_bottom = -165.278
scale = Vector2(2, 2)
theme_override_constants/separation = 0

[node name="element" type="HBoxContainer" parent="Control/StreakTracker"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="stage" type="HBoxContainer" parent="Control/StreakTracker"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="role" type="HBoxContainer" parent="Control/StreakTracker"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="GamePrompts" type="Label" parent="Control"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.199
anchor_top = 0.448
anchor_right = 0.804
anchor_bottom = 0.512
offset_left = 0.799011
offset_top = -0.0960083
offset_right = 0.404053
offset_bottom = 0.175964
theme_override_constants/shadow_offset_y = 0
horizontal_alignment = 1

[node name="LeftButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 41.0
offset_top = 227.0
offset_right = 116.0
offset_bottom = 730.0
mouse_filter = 1

[node name="RightButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 1470.0
offset_top = 216.0
offset_right = 1557.0
offset_bottom = 735.0
mouse_filter = 1

[node name="Achievements" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.27
anchor_right = 0.83
anchor_bottom = 0.8
offset_left = 0.150009
offset_top = -643.54
offset_right = 0.149902
offset_bottom = -643.537
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("8_1unnu")

[node name="CenterContainer" type="ScrollContainer" parent="Control/Achievements"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.021
anchor_bottom = 1.0
offset_right = -740.154
offset_bottom = -316.063
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(3, 3)
theme_override_styles/panel = SubResource("StyleBoxFlat_r5yqi")
horizontal_scroll_mode = 3

[node name="GridContainer" type="GridContainer" parent="Control/Achievements/CenterContainer"]
texture_filter = 1
layout_mode = 2
theme = SubResource("Theme_6mec8")
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 12
columns = 7

[node name="Button" type="TextureButton" parent="Control/Achievements"]
texture_filter = 1
layout_mode = 2
anchor_left = 0.454
anchor_top = -0.036
anchor_right = 0.575
anchor_bottom = 0.05
offset_left = 5.35678
offset_top = 44.2103
offset_right = -107.209
offset_bottom = 46.0968
grow_horizontal = 2
rotation = -1.5708
scale = Vector2(3, 3)
texture_hover = ExtResource("11_hq25m")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_82gdm")
}

[node name="BGM" type="AudioStreamPlayer2D" parent="Control"]
stream = ExtResource("10_vy6s6")
autoplay = true

[node name="CarryOver" type="CanvasLayer" parent="."]
layer = 2

[node name="Nodes" type="Node2D" parent="CarryOver"]
top_level = true
z_index = 1
z_as_relative = false
texture_filter = 1

[node name="Matches" type="Node2D" parent="CarryOver/Nodes"]

[node name="SoundEffects" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_fff7n")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="input_event" from="CanvasLayer/BGM" to="." method="_on_bgm_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/BGM" to="." method="_on_bgm_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/BGM" to="." method="_on_bgm_mouse_exited"]
[connection signal="input_event" from="CanvasLayer/SE" to="." method="_on_se_input_event"]
[connection signal="mouse_entered" from="CanvasLayer/SE" to="." method="_on_se_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/SE" to="." method="_on_se_mouse_exited"]
[connection signal="mouse_entered" from="Control/LeftButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/LeftButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="mouse_entered" from="Control/RightButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/RightButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/RightButton" to="." method="_on_right_button_pressed"]
[connection signal="mouse_entered" from="Control/Achievements/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Control/Achievements/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Control/Achievements/Button" to="." method="_close_achievements"]
[connection signal="animation_finished" from="Control/AnimationPlayer" to="." method="_on_control_animation_finished"]
